--- a/package.json
+++ b/package.json
@@ -46,7 +46,11 @@
     "assert": "^2.0.0",
     "buffer": "^5.7.1",
     "chai": "^4.3.7",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "events": "^3.3.0",
     "hardhat-gas-reporter": "^1.0.8",
+    "os-browserify": "^0.3.0",
     "parcel-reporter-static-files-copy": "^1.5.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
@@ -54,6 +58,7 @@
     "stream-browserify": "^3.0.0",
     "ts-node": "^10.9.1",
     "typechain": "^8.1.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "vm-browserify": "^1.1.2"
   }
 }
